<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.VerificationActivity">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:id="@+id/toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:textAlignment="center"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:textColor="@color/text_color"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_below="@id/toolbar"
                android:layout_marginTop="16dp"
                android:id="@+id/tv_title_verif"
                android:text="@string/not_verif_txt"/>

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:id="@+id/img_verify"
                android:src="@drawable/onboard1"
                android:layout_below="@id/tv_title_verif"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:textAlignment="center"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:textColor="@color/text_color"
                android:textSize="14sp"
                android:layout_below="@id/img_verify"
                android:layout_marginTop="16dp"
                android:id="@+id/tv_detail_verify"
                android:text="@string/verif_detail_txt"/>

            <android.support.design.widget.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_detail_verify"
                android:id="@+id/verif_email_box"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/verif_emailTv"
                    android:hint="@string/email"/>

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="8sp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="16dp"
                android:id="@+id/tv_val_verif_email"
                android:text="@string/must_not_blank"
                android:visibility="gone"
                android:textColor="@color/not_valid_color"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resend_email_txt"
                android:layout_marginBottom="16dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:layout_below="@id/verif_email_box"
                style="@style/Widget.AppCompat.Button.Colored"
                android:id="@+id/btn_resend"/>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>