<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".fragments.RegisterFragment"
    android:focusableInTouchMode="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.design.widget.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/register_namaTv"
            android:hint="@string/nama_lengkap"/>
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="8sp"
        android:visibility="gone"
        android:layout_gravity="end"
        android:layout_marginRight="16dp"
        android:id="@+id/tv_val_name"
        android:textColor="@color/not_valid_color"/>

    <android.support.design.widget.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/register_emailTv"
            android:hint="@string/email"/>
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="8sp"
        android:visibility="gone"
        android:layout_gravity="end"
        android:layout_marginRight="16dp"
        android:id="@+id/tv_val_email"
        android:textColor="@color/not_valid_color"/>

    <android.support.design.widget.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:id="@+id/register_telpTv"
            android:hint="@string/telepon"/>

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="8sp"
        android:visibility="gone"
        android:layout_gravity="end"
        android:layout_marginRight="16dp"
        android:id="@+id/tv_val_phone"
        android:textColor="@color/not_valid_color"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:id="@+id/spinner_provinsi"/>

    <android.support.design.widget.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/register_kotaTv"
            android:hint="@string/kota"/>

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="8sp"
        android:visibility="gone"
        android:layout_gravity="end"
        android:layout_marginRight="16dp"
        android:id="@+id/tv_val_kota"
        android:textColor="@color/not_valid_color"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:id="@+id/spinner_profesi"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="8sp"
        android:visibility="gone"
        android:layout_gravity="end"
        android:layout_marginRight="16dp"
        android:id="@+id/tv_val_profesi"
        android:textColor="@color/not_valid_color"/>

    <android.support.design.widget.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/register_passwdTv"
            android:inputType="textPassword"
            android:hint="@string/kata_sandi"/>

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="8sp"
        android:visibility="gone"
        android:layout_gravity="end"
        android:layout_marginRight="16dp"
        android:id="@+id/tv_val_pass"
        android:textColor="@color/not_valid_color"/>

    <android.support.design.widget.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/register_confirm_passwdTv"
            android:inputType="textPassword"
            android:hint="@string/konfirmasi_kata_sandi"/>

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="8sp"
        android:visibility="gone"
        android:layout_gravity="end"
        android:layout_marginRight="16dp"
        android:id="@+id/tv_val_confirm"
        android:textColor="@color/not_valid_color"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="16dp"
        android:textSize="18sp"
        android:id="@+id/register_btn"
        android:textColor="@color/text_white"
        android:background="@color/colorSecondBtn"
        android:layout_gravity="center_horizontal"
        android:text="@string/daftar"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_toLeftOf="@id/or_tv"
            android:layout_centerVertical="true"
            android:layout_marginRight="16dp"
            android:background="#c0c0c0"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/or_tv"
            android:text="atau masuk dengan"
            android:layout_centerHorizontal="true"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_toRightOf="@id/or_tv"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:background="#c0c0c0"/>

    </RelativeLayout>

    <com.google.android.gms.common.SignInButton
        android:layout_width="match_parent"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:gravity="center_vertical|center"
        android:layout_height="55dp" />

    <com.facebook.login.widget.LoginButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginRight="11dp"
        android:layout_marginLeft="11dp"
        android:layout_marginBottom="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp" />

</LinearLayout>