<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:focusableInTouchMode="true"
    tools:context=".fragments.LoginFragment"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.design.widget.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/login_emailTv"
            android:hint="@string/email"/>

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="8sp"
        android:visibility="gone"
        android:layout_gravity="end"
        android:layout_marginRight="16dp"
        android:id="@+id/tv_val_log_email"
        android:textColor="@color/not_valid_color"/>

    <android.support.design.widget.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/login_passwdTv"
            android:inputType="textPassword"
            android:hint="@string/kata_sandi"/>

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="8sp"
        android:visibility="gone"
        android:layout_gravity="end"
        android:layout_marginRight="16dp"
        android:id="@+id/tv_val_log_pass"
        android:textColor="@color/not_valid_color"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal">

        <CheckBox
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/checkbox_remember"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="Ingat saya?"/>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="16dp"
        android:textColor="@color/text_white"
        android:background="@color/colorPrimary"
        android:layout_gravity="center_horizontal"
        android:textSize="18sp"
        android:id="@+id/login_btn"
        android:text="@string/masuk"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_gravity="right"
        android:id="@+id/forget_passwd_tv"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:text="Lupa kata sandi?"/>

</LinearLayout>